# codex_router

./: .gitignore  Cargo.toml  README.md  run.sh
docs/plans/: 2026-01-11-codex-router-desktop-ui-design.md  2026-01-11-codex-router-desktop-ui-implementation.md  2026-01-12-desktop-ui-refresh-tray-design.md  2026-01-12-desktop-ui-refresh-tray-plan.md  2026-01-13-deps-upgrade-design.md  2026-01-13-deps-upgrade.md  2026-01-13-dmg-packaging-design.md  2026-01-13-dmg-packaging-plan.md  2026-01-13-profile-switch-save-login-design.md  2026-01-13-profile-switch-save-login-plan.md
examples/: winit_monitor_smoke.rs
scripts/: fix_icon_transparency.py  package-dmg.sh
src/: api.rs  app.rs  app_state.rs  auth.rs  codex_types.rs  config.rs  dock.rs  icon.rs  lib.rs  login_output.rs  main.rs  oauth.rs  profile.rs  refresh.rs  server.rs  shared.rs  state.rs  test_support.rs  tray.rs  worker.rs
tests/: package_script.rs  server_integration.rs
