[package]
name = "codex_router"
version = "0.1.0"
edition = "2021"
description = "A Codex account switcher and quota monitor for Mac M4"
authors = ["liu_y"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# colored output
colored = "2.1"
# UI
eframe = "0.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24"
