[package]
name = "codex_router"
version = "0.1.0"
edition = "2021"
description = "A Codex account switcher and quota monitor for Mac M4"
authors = ["liu_y"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# JWT parsing (no verification)
base64 = "0.22"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# UI
eframe = "0.33.3"
tray-icon = "0.21.3"
image = { version = "0.25", features = ["png"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
open = "5.3.3"
# PKCE OAuth
sha2 = "0.10"
rand = "0.9"
urlencoding = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSWindow",
] }
objc2-foundation = { version = "0.2.2", features = [
    "NSNotification",
    "NSString",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24"
winit = "0.30"
